--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="row">
 				<div class="col"></div>
 				<div class="col is-5">
-					<img class="profile-pic" src="Holloway.JPG" alt="Profile Picture">
+					<img class="profile-pic" src="Bulldog Transparent.png" alt="Profile Picture">
 				</div>
 				<div class="col"></div>
 			</div>
@@ -26,27 +26,26 @@
 			<div class="row name-title-company">
 				<div class="col is-6">
 					<p class="text-name">Will Holloway, MBA</p>
-					<p class="text-title-company">Director of Emergency Management</p>
-					<p class="text-title-company">Business/Marketing Teacher</p>
-					<p class="text-title-company">Civil Air Patrol Sponsor</p>
-					<p class="text-title-company">ESports Coach</p>
+					<p class="text-title-company">Internal Aerospace Education Officer, Texas Wing</p>
+					<p class="text-title-company">Squadron NCO, Abilene Composite Squadron</p>
+					<p class="text-title-company">Public Affairs Officer, Abilene Composite Squadron</p>
 				</div>
 				<div class="col">
-					<img src="Clyde CISD.png" alt="Clyde CISD Logo">
+					<img src="StackedCAP.png" alt="Civil Air Patrol Logo">
 				</div>
 			</div>
 		</div>
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="mailto:wholloway@clydeisd.org">
+		<a href="mailto:wholloway@abilenecap.org">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-email.svg" alt="Email Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">wholloway@clydeisd.org</p>
+						<p class="text-detail">wholloway@abilenecap.org</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -75,14 +74,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="https://www.clydeisd.org">
+		<a href="https://abilene.cap.gov">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-website.svg" alt="Website Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">clydeisd.org</p>
+						<p class="text-detail">Abilene.CAP.gov</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -93,14 +92,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="https://goo.gl/maps/ZzYVXETK1VCxXmc18">
+		<a href="https://goo.gl/maps/QauCGNYk4gFbuQqUA">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-address.svg" alt="Address Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">500 N. Hays Road, Clyde, Texas, 79510</p>
+						<p class="text-detail">4400 Buffalo Gap Rd, Suite 0525, Abilene, Texas 79606</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
