--- a/index.html
+++ b/index.html
@@ -26,12 +26,15 @@
 			<div class="row name-title-company">
 				<div class="col is-6">
 					<p class="text-name">Will Holloway, MBA</p>
+					<p class="text-title-company">Assistant Marketing and Communications Officer, Texas Wing</p>
 					<p class="text-title-company">Internal Aerospace Education Officer, Texas Wing</p>
 					<p class="text-title-company">Squadron NCO, Abilene Composite Squadron</p>
-					<p class="text-title-company">Public Affairs Officer, Abilene Composite Squadron</p>
+					<p class="text-title-company">Marketing and Communications Oficer, Abilene Composite Squadron</p>
+					<p class="text-title-company">Safety Officer, Abilene Composite Squadron</p>
+					<p class="text-title-company">Education and Training Off, Abilene Composite Squadron</p>
 				</div>
 				<div class="col">
-					<img src="StackedCAP.png" alt="Civil Air Patrol Logo">
+					<img src="CAP_Vertical_AUX_med.png" alt="Civil Air Patrol Logo">
 				</div>
 			</div>
 		</div>
@@ -42,7 +45,7 @@
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
-						<img src="assets/icon-email.svg" alt="Email Icon"">
+						<img src="assets/icon-email.svg" alt="Email Icon">
 					</div>
 					<div class="col is-8">
 						<p class="text-detail">wholloway@abilenecap.org</p>
@@ -60,7 +63,7 @@
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
-						<img src="assets/icon-phone.svg" alt="Phone Icon"">
+						<img src="assets/icon-phone.svg" alt="Phone Icon">
 					</div>
 					<div class="col is-8">
 						<p class="text-detail">(+1)325.518.1620</p>
@@ -78,7 +81,7 @@
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
-						<img src="assets/icon-website.svg" alt="Website Icon"">
+						<img src="assets/icon-website.svg" alt="Website Icon">
 					</div>
 					<div class="col is-8">
 						<p class="text-detail">Abilene.CAP.gov</p>
@@ -90,7 +93,43 @@
 			</div>
 		</a>
 	</section>
+															    
+	<section class="bg-color-white secondary-info">
+		<a href="https://facebook.com/txwgcap">
+			<div class="container">
+				<div class="row detail">
+					<div class="col">
+						<img src="assets/facebook_icon_2013.svg" alt="Facebook Icon">
+					</div>
+					<div class="col is-8">
+						<p class="text-detail">@txwgcap</p>
+					</div>
+					<div class="col">
+						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
+					</div>
+				</div>
+			</div>
+		</a>
+	</section>														    
 
+	<section class="bg-color-white secondary-info">
+		<a href="https://facebook.com/abilenecap">
+			<div class="container">
+				<div class="row detail">
+					<div class="col">
+						<img src="assets/facebook_icon_2013.svg" alt="Facebook Icon">
+					</div>
+					<div class="col is-8">
+						<p class="text-detail">@abileneCAP</p>
+					</div>
+					<div class="col">
+						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
+					</div>
+				</div>
+			</div>
+		</a>
+	</section>
+	
 	<section class="bg-color-white secondary-info">
 		<a href="https://goo.gl/maps/QauCGNYk4gFbuQqUA">
 			<div class="container">
