--- a/index.html
+++ b/index.html
@@ -99,8 +99,7 @@
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
-						<img src="instagram_logo_2016.svg" alt="Instagram Icon">
-						<img src="facebook_icon_2013.svg" alt="Facebook Icon">
+						<img src="assets/icon-website.svg" alt="Instagram Icon">
 					</div>
 					<div class="col is-8">
 						<p class="text-detail">@txwgcap</p>
@@ -118,8 +117,7 @@
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
-						<img src="instagram_logo_2016.svg" alt="Instagram Icon">
-						<img src="facebook_icon_2013.svg" alt="Facebook Icon">
+						<img src="assets/icon-website.svg" alt="Instagram Icon">
 					</div>
 					<div class="col is-8">
 						<p class="text-detail">@abileneCAP</p>
